--- a/scripts/index.html
+++ b/scripts/index.html
@@ -138,6 +138,15 @@ $_["http"].request("/app-route", {"Form":"data"}, (error, response) => {
     }
 });
 
+// AJAX
+function my_function(error, response) {
+    if (!error) {
+        console.log(response.data);
+    }
+}
+&lt;a class="ajax" href="/route" data-ajax-return="my_function">Link&lt;/a>
+&lt;form class="ajax" action="/route" data-ajax-return="my_function">&lt;/form>
+
 /*
 | ------------------------------------------------------------------------------
 | $_["file"]
